--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -15,6 +15,9 @@
         <!-- JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+        <!-- Party js -->
+        <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
+
     </head>
 
     <body>
@@ -61,6 +64,8 @@
         <!-- Scripts -->
         <script src="{% static 'website/js/mobile-menu.js' %}"></script>
         <script src="{% static 'website/js/closebutton.js' %}"></script>
+        <script src="{% static 'website/js/confetti.js' %}"></script>
+        <script src="{% static 'website/js/searchbuttons.js' %}"></script>
     </body>
 
 </html>
