--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -5,8 +5,8 @@
 <div id="popup">
     {% if popup == "login"%}
     <div class="confettilaunchers">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti" style="transform: scaleX(-1);">
+        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti" class="confetti1">
+        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti" style="transform: scaleX(-1);" class="confetti2">
     </div>
     <div class="closebutton">
         <img src="https://i.ibb.co/vhVCrWd/close.png" alt="close" class="closebutton">
@@ -14,9 +14,8 @@
     <p style="top: 30px;"> Congrats,</p>
     <p style="bottom: 30px;"> You're Logged In!</p>
     {% elif popup == "invalidlogin" %}
-    <div class="confettilaunchers">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti" style="transform: scaleX(-1);">
+    <div class="invalidimgwrapper">
+        <img src="https://i.ibb.co/0sN5rkB/invalid.png" alt="invalid">
     </div>
     <div class="closebutton">
         <img src="https://i.ibb.co/vhVCrWd/close.png" alt="close" class="closebutton">
@@ -24,9 +23,8 @@
     <p style="top: 30px;"> Sorry,</p>
     <p style="bottom: 30px;"> Couldn't Log In!</p>
     {% elif popup == "logout"%}
-    <div class="confettilaunchers">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti">
-        <img src="https://i.ibb.co/gt4rJ61/confetti.png" alt="confetti" style="transform: scaleX(-1);">
+    <div class="logoutimgwrapper">
+        <img src="https://i.ibb.co/sVjJccz/comebacksoon-adobe-express.png" alt="comebacksoon-adobe-express">
     </div>
     <div class="closebutton">
         <img src="https://i.ibb.co/vhVCrWd/close.png" alt="close" class="closebutton">
