--- a/website/static/website/css/base.css
+++ b/website/static/website/css/base.css
@@ -1,203 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* color pallete: #ffffff // #00171f // #003459 // #007ea7 // #00a8e8*/
+
 :root{
-    --ucla-blue: #2774AE;
-    --ucla-gold: #FFD100;
-    --lightest-blue: #DAEBFE;
-    --lighter-blue: #8BB8E8;
-    --darker-blue: #005587;
-    --darkest-blue: #003B5C;
-    --darker-gold: #FFC72C;
-    --darkest-gold: #FFB81C;
-    --green: #00D100;
-    --light-green: #00A300;
-    --dark-green: #00FF00;
+    --accent: #00a8e8;
 }
 
-.center{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-
+/* set font for website*/
 html{
-    padding: 0;
-    overflow-x: hidden;
+    font-family: 'Montserrat', sans-serif;
 }
 
-body {    
-    margin: 0 !important;
-    padding: 0 !important;
-    font-family: Helvetica, sans-serif;
-    background-color: var(--lightest-blue);
+/* remove padding from screen*/
+body { margin: 0; padding: 0; }
+
+@media (max-width: 860px) {
 }
-
-#navbar{
-    align-items: center;
-    display: flex;
-    background-color: var(--darker-blue);
-    z-index: 3;
-}
-
-#navbar a{
-    padding-left: 3%;
-    padding-right: 3%;
-    font-weight: 750;
-    font-size: 1.2em;
-    line-height: 100%;
-
-    text-decoration: none;
-    font-family: Arial, sans-serif;
-    color: var(--darker-gold);
-
-    position: relative;
-}
-
-#navbar a:hover{
-    color: var(--lighter-blue);
-    cursor: pointer;
-    text-align: center;
-}
-
-#navlogo{
-    height: auto;
-}
-
-.align-right{
-    margin-left: auto;
-    padding-right: 1%!important;
-}
-
-.profile-img{
-    margin-top: 10%;
-    margin-bottom: 10%;
-    max-height: 80%;
-    width: auto;
-}
-
-.max-height{
-    height: 100%;
-}
-
-/* Phone/Tablet */
-
-@media only screen 
-  and (min-device-width: 300px) 
-  and (max-device-width: 1050px){
-    #navbar{
-        padding: 0;
-        height: 250px;
-        width: 100%;
-        position: fixed;
-    }
-
-    #navlogo{
-        width: 500px;
-    }
-
-    .profile-img{
-        position: absolute;
-        top: 20px;
-        right: 20px;
-    }
-
-    .nav-logo-parent{
-        width: 100%;
-    }
-
-    #mobile-menu-button{
-        position: fixed;
-        transform: scale(2.5, 2.5);
-        z-index: 5;
-        top: 50px;
-        left: 80px;
-    }
-
-    .profile-img-mobile{
-        width: 150px;
-        height: auto;
-        position: fixed;
-        z-index: 4;
-        top: 50px;
-        right: 30px;
-    }
-
-    #mobile-sidebar{
+@media (min-width: 861px) {
+    .nav{
         display: flex;
-        height: 100vh;
-        width: 800px;
-        left: -800px;
-        background-color: var(--darkest-blue);
-        position: fixed;
-        z-index: 4;
-        flex-wrap: wrap;
+        width: 100%;
+        background-color: white;
+        height: 80px;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    }
+    .navlogo{
+        margin-right: auto;
+        height: 80%;
+        width: auto;
+        display: flex;
         justify-content: center;
         align-items: center;
     }
-
-    #menu-list{
+    .navimg{
+        height: 100%;
+        width: auto;
+        filter: brightness(0) saturate(100%) invert(73%) sepia(73%) saturate(5246%) hue-rotate(161deg) brightness(94%) contrast(102%);
+    }
+    .nav p{
+        font-size: 1.2em;
+        font-weight: 600;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    .nav p:hover{
+        cursor: pointer;
+    }
+    .accountimgwrapper{
         display: flex;
-        flex-wrap: wrap;
-        width: fit-content;
-        height: fit-content;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-right: 1%;
     }
-
-    #menu-list a{
-        color: var(--darker-gold);
-        width: 80%;
-        margin-left: 20%;
-        margin-top: 2vh;
-        margin-bottom: 2vh;
-        font-size: 4em;
-        font-style: italic;
-        text-decoration: solid;
+    .accountimg{
+        border-radius: 20px;
+        height: 40%;
+        padding: 10px;
+        width: auto;
+        -webkit-transition: background-color 250ms linear;
+        -ms-transition: background-color 250ms linear;
+        transition: background-color 250ms linear;
     }
-
-    #navbar-margin{
-        height: 250px;
-    }
-
-    #navlogo-mobile{
-        margin-top: 50px;
-        margin-bottom: 50px;
-        width: 650px;
-        height: auto;
-    }
-
-    .profile-img-mobile-sidebar{
-        width: 500px;
-        height: auto;
+    .accountimg:hover{
+        cursor: pointer;
+        background-color: #00a8e8;
+        -webkit-transition: background-color 250ms linear;
+        -ms-transition: background-color 250ms linear;
+        transition: background-color 250ms linear;
     }
 }
 
-/* Tablets, small changes from above section*/
-
-@media only screen 
-  and (min-device-width: 720px) 
-  and (max-device-width: 1050px){
-    .profile-img-mobile-sidebar{
-        display: none!important;
-    }
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
 }
-
-/* Computers */
-@media only screen 
-  and (min-device-width: 1051px) {
-
-    #navbar{
-        padding: 0;
-        height: 15vh;
-        max-height: 100px;
-    }
-
-    #navlogo{
-        min-width: 50px;
-        max-width: 200px;
-        padding-left: 1%;
-        padding-right: 4.5%;
-        margin-right: auto;
-        padding-left: 1%;
-    }
-
-    #navbar a{
-        width: fit-content;
-    }
-}
+  
+  .hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--accent);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
