--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -13,9 +13,6 @@
         <!-- Party js -->
         <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
 
-        <!-- snap svg -->
-        <script src="{% static 'snap.svg-min.js'%}"></script>
-
     </head>
 
     <body>
@@ -47,4 +44,6 @@
         
     </body>
     <script src="{% static 'website/js/graph.js'%}"></script>
+    <!-- snap svg -->
+    <script src="{% static 'wesbite/js/snap.js'%}"></script>
 </html>
