--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -28,11 +28,20 @@
         </div>
     </div>
     <div class="sidetext">
-        <p class="textleft"><span class="accent emphasize">24</span> Hours a Day</p>
-        <p class="textright"><span class="accent emphasize">7</span> Days a Week</p>
-        <p class="textleft"><span class="accent emphasize">52</span> Weeks a Year</p>
-        <p class="textright">A Club on <span class="accent emphasize">Your</span> Time!</p>
-        <button class="getstartedbutton">Get Started!</button>
+        <p class="textheader">A Club on <span class="accent">Your</span> Time!</p>
+        <p class="centertext">As UCLA students, we're always busy balancing our extracurriculars and classes.</p>
+        <p>Unfortunately, sometimes an in person meeting is just not possible
+            that day or at that time. Although we still have some in person meetings, the core of the club is on your screen right now!</p>
+        <p>We are currently in the middle of a financial transformation with the emergence of cryptocurruncies and we were shocked to find there was 
+            no club at UCLA for crypto education. That's why we're here!
+        </p>
+        <p>
+            Our current mission is to get students comfortable investing in cryptocurruncies and provide some friendly competition along the way.
+        </p>
+        <p>
+            If you have any suggestions or questions please feel free to reach out through the contacts below!
+        </p>
+        <p>If you're new, click the start tab to learn more about how you can get involved!</p>
     </div>
 </div>
 
