--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -17,6 +17,18 @@
     </head>
 
     <body>
+        <div id="sidemenu" class="mobile">
+            <div class="linkwrapper">
+                <p>about</p>
+                <p>start</p>
+                <p>leadership</p>
+                <p>portfolio</p>
+                <p>leaderboards</p>
+            </div>
+        </div>
+        <div id="accountpopup">
+            <div class="corner"></div>
+        </div>
         <div class="nav">
             <div class="navlogo not-mobile">
                 <img src="{% static 'website/images/logo.png'%}" class="navimg">
@@ -26,13 +38,7 @@
             <p class="hover-underline-animation navlink">leadership</p>
             <p class="hover-underline-animation navlink">portfolio</p>
             <p class="hover-underline-animation navlink">leaderboards</p>
-            <div id="menuicon" class="mobile container">
-                <button id="hamburgericon" class="hamburger hamburger--collapse" type="button">
-                    <span class="hamburger-box">
-                      <span class="hamburger-inner"></span>
-                    </span>
-                  </button>
-            </div>
+            
             <div class="navlogo mobile">
                 <img src="{% static 'website/images/logo.png'%}" class="navimg">
             </div>
@@ -40,9 +46,14 @@
                 <img  src="{% static 'website/images/account.png'%}" class="accountimg">
             </div>
         </div>
-
-        <div id="sidemenu" class="mobile">
+        <div id="menuicon" class="mobile container">
+            <button id="hamburgericon" class="hamburger hamburger--collapse" type="button">
+                <span class="hamburger-box">
+                  <span class="hamburger-inner"></span>
+                </span>
+              </button>
         </div>
+        
         
         <div class="accountpopup">
 
@@ -60,4 +71,5 @@
     <script src="{% static 'website/js/basegallery.js'%}"></script>
     <script src="{% static 'website/js/nav.js'%}"></script>
     <script src="{% static 'website/js/sidemenu.js'%}"></script>
+    <script src="{% static 'website/js/accountpopup.js'%}"></script>
 </html>
